overflowing text issue fixed

--- a/src/components/Feed/About.sass
+++ b/src/components/Feed/About.sass
@@ -17,8 +17,9 @@
     position: absolute
     top: 8px
     left: 16px
+    
 
 .img_text
-    color: rgba(255, 255, 255, 0.54)
-    height: 100px
-   
+    color: rgb(255, 255, 255)
+    white-space: normal
+    margin-bottom: 2px
